themes/SuiteP/css/style.css
/* ... */
#quickcreatetop a:hover {
    cursor: pointer;
    background-color: #829EB5;
    background-position: 80px -56px;
    text-decoration: none;
    border-bottom-right-radius: 0px;
    border-bottom-left-radius: 0px;
}

#quickcreatetop ul.dropdown-menu {
    background-color: #829EB5;
    border-radius: 3px;
    border-top-right-radius: 0px;
    padding: 4px 10px 4px 10px;
}

#quickcreatetop ul li {
    padding: 0 !important;
    margin: 0 !important;
}

#quickcreatetop ul li a {
    padding: 12px 15px 12px 15px !important;
    margin: 0 !important;
    background-image: none;
    background-color: #829EB5;
    border-radius: 0;
    text-transform: none;
    border-bottom: 1px solid #95ACC0;
    letter-spacing: 0px;
    font-size: 14px;
    width: 100%;
    display: block;
    text-align: left;
}

#quickcreatetop ul li.last a {
    border-bottom: none;
}

#quickcreatetop ul li a:hover {
    color: #fff !important;
}

#quickcreatetop .dropdown-menu {
    margin-top: 0px !important;
}

#desktop_notifications {
    float: left;
    width: 44px;
    height: 48px;
    margin-right: 15px;
    background-image: none, url("../../../../themes/SuiteP/images/p_icon_alert.svg"), url("../../../../themes/SuiteP/images/p_icon_alert.png");
    background-repeat: no-repeat;
    background-position: 0px 0px;
}

#desktop_notifications:hover {
    background-position: 0px -100px;
}

#desktop_notifications a {
    color: blue !important;
    margin: 8px 0 8px 0 !important;
    line-height: 50px;
    padding: 0 5px 0 5px !important;
    cursor: pointer;
}

#desktop_notifications ul li {
    padding: 0 !important;
    margin: 0 !important;
}

#desktop_notifications ul li a {
    color: green !important;
    padding: 0 3px 0 3px !important;
    margin: 0 !important;
    line-height: 35px;
}

#desktop_notifications ul li a:hover {
    color: red !important;
}

#desktop_notifications button {
    background-color: transparent;
    border: none;
    width: 44px;
    height: 48px;
    margin-top: 0px;
}

#desktop_notifications span.alert_count {
    background-color: #F08377;
    line-height: 30px;
    color: #fff;
    height: 30px;
    width: 30px;
    display: block;
    float: left;
    border-radius: 30px;
    position: relative;
    left: 15px;
    top: -15px;
    font-size: 10px;
}

#desktop_notifications div.dropdown-menu {
    background-color: #F08377;
    color: #fff;
    margin: 0;
    padding: 8px;
    font-size: 12px;
    border-radius: 0px;
    text-align: center;
}

.mobile-bar ul.dropdown-menu.user-dropdown{
    left: -140px !important;
}

#modulelinks > ul.dropdown-menu {
    left: 50px !important;
}

@media (min-width: 0px) and (max-height: 320px) {

    .mobile-bar ul.dropdown-menu.user-dropdown{
        top: 50px !important;
        left: -140px !important;
        height: 200px !important;
        overflow-y: scroll !important;
    }
    #modulelinks > ul,
    .mobileheader ul,
    #mobile_menu,
    ul.dropdown-menu{
        overflow-y: scroll !important;
        height: 180px;
        max-height: 200px;
    }

    #wizform #wizard {
        min-width: 300px;
    }
}

@media (max-width: 640px) and (max-height: 320px) {
     #quickcreatetop ul.dropdown-menu {
        height: 180px !important;
        max-height: 180px !important;
        overflow-y: scroll !important;
    }

    li#tab-actions > ul{
        height: 180px !important;
        max-height: 180px !important;
        overflow-y: scroll !important;
    }
}

@media (min-width: 480px) and (max-height: 321px) {

    .mobile-bar ul.dropdown-menu.user-dropdown{
        top: 25px !important;
        left: -140px !important;
        height: 200px !important;
        overflow-y: scroll !important;
    }
    #modulelinks > ul,
    .mobileheader ul,
    #mobile_menu {
        overflow-y: scroll !important;
        height: 180px;
        max-height: 200px;
    }

    #wizform #wizard {
        width: 400px;
    }
}



@media (min-width: 768px) and (min-height: 381px) {
    .mobile-bar #globalLinks {
        height: 90px;
    }
    .mobile-bar ul.dropdown-menu.user-dropdown{
        top: 78px !important;
        left: -140px !important;
    }

    #modulelinks > ul,
    .mobileheader ul,
    #mobile_menu {
        overflow-y: scroll !important;
        height: 400px;
        max-height: 400px;
    }

    #wizform #wizard {
        width: 700px;
    }
}

@media (min-width: 768px) and (min-height: 381px) {
    .mobile-bar #globalLinks {
        height: 90px;
    }
    .mobile-bar ul.dropdown-menu.user-dropdown{
        top: 78px !important;
        left: -140px !important;
    }

    #wizform #wizard {
        width: 700px;
    }
}




#themePreview {
    width: 250px;
}

.icon {
    fill: #F08377;
    pointer-events: none;
    fill: #F08377;
    pointer-events: none;
}

.inlineEdit {
    cursor: pointer !important;
}

.inlineEditIcon {
    float: right;
    height: 10px;
    color: #F08377;
    width: 15px;
    padding-left: 3px;
}

.inlineEditIcon svg {
    fill: #F08377;
    display: none;
}

.inlineEdit:hover .inlineEditIcon svg {
    cursor: pointer !important;
    display: inline;
}

td.inlineEditActive {
    background-color: #cccccc;
}

#inlineEditSaveButton {
    float: right;
    display: inline;
}

#inlineEditSaveButton svg {
    fill: #F08377;
}

#inlineEditSaveButton svg:hover {
    fill: #F08377;
}

#inline_edit_field {
    float: left;
    width: 80%;
    padding-right: 5px;
}

#editAccountDialogue_c {
    height: 90% !important;
}

#editAccountDialogue {
    height: 90% !important;
    overflow: auto !important;
}

#settingsDialog_c {
    top: 0 !important;
    left: 64px !important;
}

#settingsDialog .yui-content {
    height: 384px;
    overflow-y: auto;
}

/* stop child elements of a hidden dialog from showing up above other elements */
.yui-overlay-hidden * {
    display: none;
    visibility: collapse;
    height: 0;
}

object {
    pointer-events: none;
}

.favorite {
    width: 20px;
    float: left;
    margin-left: 5px;
}
/* ... */

